--- a/flask_app/static/css/profile.css
+++ b/flask_app/static/css/profile.css
@@ -102,3 +102,14 @@ a:active {
     text-decoration: underline;
 }
 
+#search-body{
+    padding: 60px;
+    background-color: white;
+}
+
+.pkmn-card{
+    width: 200px;
+    height: 300px;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
