--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -16,7 +16,16 @@
             <div class="logo">
                 <a href="/"><img src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
             </div>
-            <input type="text" name="" id="search_bar" placeholder="  Search...">
+            <form>
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <input type="text" name="" class="form-control mb-2" id="search_bar" placeholder="  Search...">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-2" id="submit-button">Search</button>
+                    </div>
+                </div>
+            </form>
             <div class="registration">
                 <div class="links">
                     {% if 'user_id' not in session %}
@@ -32,5 +41,14 @@
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
         </div>
-        
+        <div id="search-body">
+            <div class="row" id="card-container">
+                
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='javascript/main.js') }}"></script>
+</body>
+</html>
         
