commit on 'master

--- a/flask_app/static/css/profile.css
+++ b/flask_app/static/css/profile.css
@@ -108,8 +108,13 @@ a:active {
 }
 
 .pkmn-card{
-    width: 200px;
+    width: 215px;
     height: 300px;
     margin-bottom: 30px;
     cursor: pointer;
+}
+
+.col-auto{
+    display: flex;
+    margin-top: 5px;
 }
