--- a/flask_app/templates/homepage.html
+++ b/flask_app/templates/homepage.html
@@ -11,6 +11,7 @@
     <title>My Virtual Binder</title>
 </head>
 <body>
+    {{session['data']}}
     <div id="container">
         <div id="navbar">
             <div class="logo">
