--- a/flask_app/templates/showcard.html
+++ b/flask_app/templates/showcard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/profile.css') }}">
-    <title>My Virtual Binder</title>
+    <title>Document</title>
 </head>
 <body>
     <div id="container">
@@ -39,14 +39,8 @@
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
         </div>
-        <div id="search-body">
-            <div class="row" id="card-container">
-                
-            </div>
-        </div>
+    <img id="card-pic" src="{{data['data']['images']['large']}}" alt="{{data['data']['name']}}">
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='javascript/main.js') }}"></script>
+
 </body>
 </html>
-        
