--- a/flask_app/static/css/create.css
+++ b/flask_app/static/css/create.css
@@ -17,12 +17,16 @@
     background-color: rgb(231, 231, 231);
 }
 
+#search_ball{
+    width: 30px;
+}
+
 .logo > a{
     margin-left: 50px;
 }
 
-a > img{
-    width: 250px;
+#logo{
+    width: 200px;
 }
 
 #search_bar{
@@ -106,6 +110,7 @@ a:active {
 #profile-link{
     color: black;
     text-decoration: underline;
+    margin-left: 15px;
 }
 
 .vertical{
