--- a/flask_app/templates/create_binder.html
+++ b/flask_app/templates/create_binder.html
@@ -14,14 +14,14 @@
     <div id="container">
         <div id="navbar">
             <div class="logo">
-                <a href="/"><img src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
+                <a href="/"><img id="logo" src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
             </div>
-            <input type="text" name="" id="search_bar" placeholder="  Search...">
             <div class="registration">
                 <div class="links">
                     {% if 'user_id' not in session %}
                         <a href="/profile" class="account">Account</a>
                         {% else %}
+                        <a href="/search"><img id="search_ball" src="{{ url_for('static', filename='img/search_ball.gif') }}"></a>
                         <p><a href="/profile" id="profile-link">{{session['name']}}</a></p>
                         <a href="/logout" class="logout">Log Out</a>
                     {% endif %}
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div id="web_nav">
-            <a href="#">Create a Binder</a>
+            <a href="/create_binder">Create a Binder</a>
             <a href="#">Public Trade</a>
         </div>
         <div id="banner">
@@ -95,13 +95,13 @@
             <div class="trade_binder">
                 <h1 class="title">Trade Binders</h1>
                 <p>Trade binders are the way to go when it comes down to displaying what you are willing to part with in order to complete your set. Allow other users to view your cards and take a peak at someone else's binders as well!</p>
-                <a href="/"><img src="{{ url_for('static', filename='img/creation_binder.png') }}" id="creation_binder"></a>
+                <a href="/binder_creation"><img src="{{ url_for('static', filename='img/creation_binder.png') }}" id="creation_binder"></a>
             </div>
             <div class="vertical"></div>
             <div class="set_binder">
                 <h1 class="title">Set Binders</h1>
                 <p>Set binders are a good way of keeping track of how many cards you have in a respective set. If you fancy yourself a completionist, it might be a smart idea to create a set binder. Take the first step towards set completion!</p>
-                <a href="/"><img src="{{ url_for('static', filename='img/set_binder.png') }}" id="set_binder"></a>
+                <a href="/binder_creation"><img src="{{ url_for('static', filename='img/set_binder.png') }}" id="set_binder"></a>
             </div>
         </div>
         <div class="binders">
