--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -18,8 +18,8 @@
                 <h3>Sign in to MyVirtualBinder</h3>
                 <form action="/account" method="post">
                     <div class="login">
-                        <h4>Email:</h4>
-                        <input type="text" name="email" class="email" placeholder="example@email.com">
+                        <h4>Username:</h4>
+                        <input type="text" name="username" class="username">
                     </div>
                     <div class="login">
                         <h4>Password:</h4>
