--- a/flask_app/templates/mybinder.html
+++ b/flask_app/templates/mybinder.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/profile.css') }}">
-    <title>My Virtual Binder</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/mybinder.css') }}">
+    <title>My Binder</title>
 </head>
 <body>
     <div id="container">
@@ -32,23 +32,11 @@
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
         </div>
-        <div id="profile-body">
-            {% for binder in binder %}
-                {% if binder.trade == "Yes" %}
-                    <a href="/show_binder/{{binder.id}}"><img src="{{ url_for('static', filename='img/pokemon_binder.png') }}" alt=""></a>
-                    {{binder.name}}
-                    {% else %}
-                    <a href="/show_binder/{{binder.id}}"><img src="{{ url_for('static', filename='img/random.png') }}" alt=""></a>
-                    {{binder.name}}
-                {% endif %}
-            {% endfor %}
-            <div class="row" id="profile-container">
-                
-            </div>
-        </div>
+        {% for cards in cards %}
+            <img id="my_cards" src="{{cards.api_id}}">
+        {% endfor %}
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='javascript/main.js') }}"></script>
 </body>
 </html>
-        
