--- a/flask_app/templates/showcard.html
+++ b/flask_app/templates/showcard.html
@@ -7,28 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/profile.css') }}">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/showcard.css') }}">
+    <title>{{data['data']['name']}} Info</title>
 </head>
 <body>
     <div id="container">
         <div id="navbar">
             <div class="logo">
-                <a href="/"><img src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
+                <a href="/"><img id="logo" src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
             </div>
-            <form action="/search" method="post">
-                <div class="form-row align-items-center">
-                    <div class="col-auto">
-                        <input type="text" name="search" class="form-control mb-2" id="search_bar" placeholder="  Search...">
-                        <button type="submit" class="btn btn-primary mb-2" id="submit-button">Search</button>
-                    </div>
-                </div>
-            </form>
             <div class="registration">
                 <div class="links">
                     {% if 'user_id' not in session %}
                         <a href="/profile" class="account">Account</a>
                         {% else %}
+                        <a href="/search"><img id="search_ball" src="{{ url_for('static', filename='img/search_ball.gif') }}"></a>
                         <p><a href="/profile" id="profile-link">{{session['name']}}</a></p>
                         <a href="/logout" class="logout">Log Out</a>
                     {% endif %}
@@ -39,7 +32,31 @@
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
         </div>
-    <img id="card-pic" src="{{data['data']['images']['large']}}" alt="{{data['data']['name']}}">
+        <div id="card_body">
+            <div class="card_info">
+                <img id="card-pic" src="{{data['data']['images']['large']}}" alt="{{data['data']['name']}}">
+                <div class="card_origin">
+                    <h1 class="card_name" >{{data['data']['name']}}</h1>
+                    <img id="set_logo" src="{{data['data']['set']['images']['logo']}}" alt="{{data['data']['set']['name']}}">
+                    <h5><strong>Card Number:</strong> {{data['data']['number']}} / {{data['data']['set'].printedTotal}} </h5>
+                    <h5><strong>Card Type/HP/Stage:</strong> {{data['data']['types'].0}} / {{data['data'].hp}} / {{data['data']['subtypes'].0}}</h5>
+                </div>
+                <form action="/save_card" method="post">
+                    <input type="hidden" name="api_id" id="" value="{{data['data']['images']['large']}}">
+                    <input type="hidden" name="name" value="{{data['data']['name']}}">
+                    <select name="binder_id" id="">
+                        {% for binder in user.binders %}
+                            <option value="{{binder.id}}">{{binder.name}}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="submit">Save Card</button>
+                </form>
+            </div>
+            
+        </div>
+    
+    
+    
     </div>
 
 </body>
