--- a/flask_app/templates/binder.html
+++ b/flask_app/templates/binder.html
@@ -10,7 +10,7 @@
     <form action="/submit_binder" method="post">
         <input type="hidden" name="user_id" value="{{session['user_id']}}">
         <select name="trade" id="trade">
-            <option value="">--Select an option--</option>
+            <option value="">--Select an Option--</option>
             <option value="Yes">Trade</option>
             <option value="No">Set</option>
         </select>
