--- a/flask_app/templates/create_binder.html
+++ b/flask_app/templates/create_binder.html
@@ -30,7 +30,8 @@
         </div>
         <div id="web_nav">
             <a href="/create_binder">Create a Binder</a>
-            <a href="#">Public Trade</a>
+            <a href="/public_trade">Public Trade</a>
+            <a href="/calculator">Card Calculator</a>
         </div>
         <div id="banner">
             <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel" >
