--- a/flask_app/static/css/mybinder.css
+++ b/flask_app/static/css/mybinder.css
@@ -150,8 +150,37 @@ a:active {
     margin-right: 0;
 }
 
-#my_cards{
-    width: 311px;
-    height: 432px;
-    margin-right: 30px;
+.my_cards{
+    width: 215px;
+    height: 300px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    
+}
+
+#display-cards{
+    display: flex;
+    width: 1500px;
+    margin: auto;
+    flex-wrap: wrap;
+}
+
+#single-card{
+    width: 215px;
+    height: 300px;
+    margin: 0 35px 75px 0;
+}
+
+.bigImg{
+    width: 226px;
+    height: 315px;
+    border: 5px solid cyan;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px black;
+}
+
+.delete-button{
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
