--- a/flask_app/static/css/showcard.css
+++ b/flask_app/static/css/showcard.css
@@ -137,6 +137,8 @@ a:active {
     width: 311px;
     height: 432px;
     margin-right: 30px;
+    box-shadow: 8px 8px 8px black;
+    border-radius: 17px;
 }
 
 #profile-link{
@@ -147,6 +149,8 @@ a:active {
 
 #card_body{
     margin-top: 30px;
+    margin-bottom: 15px;
+    overflow-wrap: normal;
 }
 
 .card_info{
@@ -161,6 +165,54 @@ a:active {
 }
 
 .card_name,
-.card_number{
+.card_number,
+h4{
     font-family: Bahnschrift SemiBold;
+    text-shadow: 4px 4px 4px rgb(199, 199, 199);
 }
+
+form{
+    width: 200px;
+    margin-bottom: 35px;
+}
+
+#main_body{
+    width: 1400px;
+    margin: auto;
+    display: block;
+}
+
+select{
+    cursor: pointer;
+    margin-right: 15px;
+}
+
+.img-fluid{
+    width: 161px;
+    height: 220px;
+    margin-left: 69.5px;
+}
+
+.card{
+    width: 300px;
+    margin-right: 15px;
+}
+
+#bottom_card{
+    display: flex;
+}
+
+.bigImg{
+    width: 300px;
+    height: 438.5px;
+    border: 5px solid rgb(0, 255, 81);
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px black;
+}
+
+
+
+.mask{
+    padding: 5px;
+}
+
