--- a/flask_app/templates/mybinder.html
+++ b/flask_app/templates/mybinder.html
@@ -31,10 +31,18 @@
         <div id="web_nav">
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
+            <a href="/calculator">Card Calculator</a>
         </div>
-        {% for cards in cards %}
-            <img id="my_cards" src="{{cards.api_id}}">
-        {% endfor %}
+        <div id="display-cards">
+            {% for card in cards %}
+                <div id="single-card">
+                    <a href="/card/{{card.card_id}}"><img class="my_cards" src="{{card.api_id}}" name="{{card.name}}" onmouseover="increaseSize(this)" onmouseleave="(decreaseSize(this))"></a>
+                    <div class="delete-button">
+                        <a href="/delete/{{card.id}}"><button id="delete-btn" type="button" class="btn btn-outline-danger btn-rounded" data-mdb-ripple-color="dark">Remove Card</button></a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='javascript/main.js') }}"></script>
