--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/profile.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/search.css') }}">
     <title>My Virtual Binder</title>
 </head>
 <body>
@@ -30,6 +30,7 @@
         <div id="web_nav">
             <a href="/create_binder">Create a Binder</a>
             <a href="/public_trade">Public Trade</a>
+            <a href="/calculator">Card Calculator</a>
         </div>
         <div id="search-body">
             <form action="/search" method="post" id="final_search">
